feat: rebrand to TQTHBAXPDENAE-SBTV
The Omniscient Quantum-Tunneling Hyper-Blox Accelerator XTREME Pro Deluxe Edition (Not An Exploit) - Sponsored by The Void

- Updated all references from EvanBlox to TQTHBAXPDENAE-SBTV
- Changed appId to void.corp.tqthbaxpdenae-sbtv
- Updated copyright to The Void Corporation - Not An Exploit LLC
- Full product name: The Omniscient Quantum-Tunneling Hyper-Blox Accelerator XTREME Pro Deluxe Edition (Not An Exploit) - Sponsored by The Void

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload macOS artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: evanblox-macos-${{ matrix.arch }}
+          name: tqthbaxpdenae-sbtv-macos-${{ matrix.arch }}
           path: release/*.dmg
 
   build-windows:
@@ -63,7 +63,7 @@ jobs:
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: evanblox-windows
+          name: tqthbaxpdenae-sbtv-windows
           path: |
             release/*.exe
             release/*.zip
@@ -89,7 +89,7 @@ jobs:
       - name: Upload Linux artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: evanblox-linux
+          name: tqthbaxpdenae-sbtv-linux
           path: |
             release/*.AppImage
             release/*.deb
